# forevex

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  docker-entrypoint.sh
migrations/: 20260324120000_init.sql  20260324140000_positions_synced_at.sql  20260324180000_gamma_market_tags_cache.sql  20260328120000_pipeline.sql  20260328130000_indexes.sql  20260331120000_enrich_gamma_cursor.sql
scripts/: reset-local-data.sql
src/: aggregate.rs  api.rs  bootstrap.rs  checkpoint.rs  config.rs  db.rs  enrich_gamma.rs  fact_trades_oss.rs  gamma_tags.rs  gamma_taxonomy.rs  goldsky.rs  http_server.rs  import_order_filled_snapshot.rs  ingest_activities.rs  ingest_markets.rs  ingest_markets_parquet.rs  lib.rs  main.rs  market_type.rs  pma.rs  pma_indexer.rs  position_analytics.rs  process_trades.rs  process_trades_pma.rs  refresh_wallets.rs  report.rs  rpc.rs  snapshot_wallets.rs  store.rs  sync.rs  taxonomy.rs  upstream.rs
