[package]
name = "forevex"
version = "0.1.0"
edition = "2021"
description = "Polymarket user / positions / activity sync service (CLI + HTTP API + Postgres)"
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = "1"
axum = "0.7"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive", "env"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "postgres",
    "migrate",
    "macros",
    "derive",
    "chrono",
    "json",
], default-features = false }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["trace", "cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy = "0.15"
urlencoding = "2"
