[package]
name = "polymarket-pipeline"
version = "0.1.0"
edition = "2021"
description = "Polymarket data pipeline: Gamma markets, Goldsky order-filled, processed trades (aligned with poly_data)"
license = "MIT OR Apache-2.0"
default-run = "polymarket-pipeline"

[[bin]]
name = "polymarket-pipeline"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive", "env"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "postgres",
    "migrate",
    "macros",
    "chrono",
    "json",
    "rust_decimal",
], default-features = false }
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rust_decimal = { version = "1", features = ["serde"] }
urlencoding = "2"
axum = "0.7"
csv = "1"
xz2 = "0.1"
